# barcode

./: .gitignore  .gitmodules  README.md  README.rst  setup.cfg  setup.py
.github/: CONTRIBUTING.md  PULL_REQUEST_TEMPLATE.md
.github/workflows/: python-package.yml
barcode/: __init__.py  barcode.py  cli.py
doc/presentation/: Makefile  barcode.tex  beamerthemelumc.sty  gen2phen_logo.eps  lgtc_logo.eps  lumc_logo.eps  lumc_logo_small.eps  nbic_logo.eps  ngi_logo.eps  nwo_logo_en.eps  nwo_logo_nl.eps  ul_logo.eps
docs/: api.rst  cli.rst  conf.py  index.rst  installation.rst  introduction.rst  library.rst  usage.rst
tests/: test_cli.py  test_library.py
