[metadata]
name = barcode
version = 1.0.1
description = Design and test NGS barcodes.
long_description = file: README.rst
author = Jeroen F.J. Laros
author_email = J.F.J.Laros@lumc.nl
url = https://github.com/jfjlaros/barcode
keywords = bioinformatics
license = MIT
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Science/Research
    Intended Audience :: Developers
    Operating System :: OS Independent
    Programming Language :: Python
    Topic :: Scientific/Engineering

[options]
packages = find:
install_requires =
    python-Levenshtein==0.12.0
tests_require =
    pytest==5.4.1

[options.entry_points]
console_scripts =
    barcode = barcode.cli:main
